--- a/api/package.json
+++ b/api/package.json
@@ -17,11 +17,13 @@
 	"author": "Michael Liendo",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/cors": "^2.8.19",
 		"@types/express": "^5.0.3",
 		"@types/node": "^24.3.0",
 		"typescript": "^5.9.2"
 	},
 	"dependencies": {
+		"cors": "^2.8.5",
 		"dotenv": "^17.2.1",
 		"express": "^5.1.0",
 		"tsx": "^4.20.5"
