--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,8 @@
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.1",
 		"express": "^5.1.0",
+		"mongodb-memory-server": "^10.2.0",
+		"mongoose": "^8.18.0",
 		"tsx": "^4.20.5"
 	}
 }
