--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
 		"typescript": "^5.9.2"
 	},
 	"dependencies": {
+		"@faker-js/faker": "^9.9.0",
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.1",
 		"express": "^5.1.0",
