--- a/biome.json
+++ b/biome.json
@@ -1,37 +1,36 @@
 {
 	"$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
 	"vcs": {
-		"enabled": false,
+		"enabled": true,
 		"clientKind": "git",
 		"useIgnoreFile": true
-	},
-	"files": {
-		"ignoreUnknown": false
-	},
-	"formatter": {
-		"enabled": true,
-		"indentStyle": "tab"
 	},
 	"linter": {
 		"enabled": true,
 		"rules": {
 			"recommended": true,
-			"complexity": {
-				"noStaticOnlyClass": "off"
-			}
+			"correctness": {
+				"noUnusedVariables": "warn",
+				"noUnusedImports": "warn",
+				"useExhaustiveDependencies": "off"
+			},
+			"suspicious": {
+				"noArrayIndexKey": "off",
+				"noUnknownAtRules": "off"
+			},
+			"style": {
+				"noNonNullAssertion": "off"
+			},
+			"complexity": { "noStaticOnlyClass": "off", "noForEach": "info" }
 		}
+	},
+	"formatter": {
+		"enabled": true
 	},
 	"javascript": {
 		"formatter": {
-			"quoteStyle": "double"
-		}
-	},
-	"assist": {
-		"enabled": true,
-		"actions": {
-			"source": {
-				"organizeImports": "on"
-			}
+			"jsxQuoteStyle": "single",
+			"quoteStyle": "single"
 		}
 	}
 }
