fix: update build commands in GitHub Actions workflows for server and client

--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -36,4 +36,4 @@ jobs:
       - name: Build Server
         env:
           PORT: 3001
-        run: npm run build:server
+        run: npm run build:api
